feat(weatherization): interactivity v1

--- a/weatherization.htm
+++ b/weatherization.htm
@@ -31,194 +31,302 @@
 			<div class="l-constrain--no-padding">
 
 
-				<!-- Full Width Hero -->
-				<section class="relative flex flex-col justify-center min-h-[50vh] z-0 lg:h-[500px] lg:min-h-0">
+				<section class="relative min-h-[50vh] z-0 lg:h-[500px] lg:min-h-0">
 					<!-- Background Image -->
-					<img src="https://placehold.co/1600x500?text=Weatherization+Hero" alt="Weatherization Hero"
+					<img src="https://placehold.co/1600x500?text=Weatherization+Hero" alt="DESCRIBE_YOUR_IMAGE"
 						class="absolute inset-0 w-full h-full object-cover z-0" />
-
-					<!-- Content Overlay -->
-					<div
-						class="relative z-10 text-white text-center px-5 py-10 max-w-3xl mx-auto leading-none text-balance">
-						<h1 class="text-4xl md:text-5xl font-serif text-balance">
-							Energy Efficiency Through Weatherization
-						</h1>
-					</div>
 				</section>
 
-				<!-- Two Column Section: Text + Image -->
-				<section class="grid sm:grid-cols-2">
-					<!-- Text Column -->
-					<div class="h-full">
-						<div class="px-8 py-12 sm:text-left text-center flex items-center h-full">
-							<div class="space-y-4 max-w-md mx-auto">
-								<h2 class="font-serif font-light text-3xl text-balance">
-									What is Weatherization?
-								</h2>
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor
-									incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-									exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-								</p>
-								<p>
-									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-									fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-									qui officia deserunt mollit anim id est laborum.
-								</p>
-
-								<!-- Optional CTA Button -->
-								<p>
-									<a href="#"
-										class="inline-block rounded-full border border-black text-black px-4 py-2 font-normal no-underline transition-transform hover:text-gray"
-										data-open-dialog>
-										Get Started
-									</a>
-								</p>
-							</div>
-						</div>
-					</div>
-
-					<!-- Image Column -->
-					<div class="h-full">
-						<div class="relative aspect-video sm:aspect-auto sm:h-full">
-							<img src="https://placehold.co/600x600?text=Weatherization+Image"
-								alt="Weatherization Services" class="absolute inset-0 w-full h-full object-cover" />
-						</div>
-					</div>
-				</section>
-
-				<!-- Two Column Section: Image + Text (Reversed) -->
-				<section class="grid sm:grid-cols-2">
-					<!-- Image Column -->
-					<div class="h-full sm:order-2">
-						<div class="relative aspect-video sm:aspect-auto sm:h-full">
-							<img src="https://placehold.co/600x600?text=Benefits+Image" alt="Weatherization Benefits"
-								class="absolute inset-0 w-full h-full object-cover" />
-						</div>
-					</div>
-
-					<!-- Text Column with Background -->
-					<div class="h-full sm:order-1">
-						<div class="bg-navy text-white px-8 py-12 sm:text-left text-center flex items-center h-full">
-							<div class="space-y-4 max-w-md mx-auto">
-								<h2 class="font-serif font-light text-3xl text-balance">
-									The Benefits
-								</h2>
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor
-									incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-									exercitation ullamco laboris.
-								</p>
-								<ul class="list-disc list-inside space-y-2">
-									<li>Reduced energy costs</li>
-									<li>Improved home comfort</li>
-									<li>Environmental benefits</li>
-									<li>Increased property value</li>
-								</ul>
-
-								<!-- Optional CTA Button -->
-								<p>
-									<a href="#"
-										class="inline-block rounded-full border border-white text-white px-4 py-2 font-normal no-underline transition-transform hover:text-gray">
-										Get Started
-									</a>
-								</p>
-							</div>
-						</div>
-					</div>
-				</section>
-				<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center">
+				<section class="px-8 py-16 text-center text-balance sm:min-h-[400px] sm:grid sm:place-content-center">
 					<div class="mx-auto max-w-2xl space-y-4">
 						<h2 class="font-serif font-light text-3xl">
-							Lorem Ipsum Dolor Sit Amet
+							See if you qualify
 						</h2>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut
-							labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-							laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-							voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 
-						</p>
-						<h2 class="font-serif font-light text-3xl pt-10">
-							Consectetur Adipiscing Elit Sed
-						</h2>
+						<!-- Main content paragraphs -->
 						<p>
-							Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-							anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-							accusantium doloremque laudantium.
+							Thank you for your interest in energy efficiency and electrification discounts provided by
+							your rural electric cooperative.
+						</p>
+						<p>
+							Please make sure your utility is listed among the electric utilities offering these
+							discounts and that you qualify.
+						</p>
 
+						<p>
+							When you get to the end and hit “submit,” this interest form is sent to your local
+							weatherization agency. The
+							weatherization agency will contact you to provide more details and a program application.
+							They will verify your income
+							and may request income documentation.
+							If you have questions, please contact your electric utility.
 						</p>
-						<p>Totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae
-							vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-							aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-						</p>
-						<p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-							sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
-							voluptatem.</p>
-						<div class="flex flex-row justify-center gap-4">
-							<a href="#"
-								class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black">
-								Lorem Ipsum
-							</a>
-							<a href="#"
-								class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black">
-								Dolor Sit
-							</a>
+
+
+						<div>
+							<p>This is a table to help you check if you qualify based on your household size.* If you
+								make less than the amount listed,
+								you qualify! Keep in mind that income thresholds are higher in some areas, so if you
+								live in a higher-income area or a
+								resort community, you may still qualify.
+
+							</p>
+							<p><small>
+
+									*Household members are people who live with you for whom you have financial
+									responsibilities, not roommates.
+								</small>
+
+							</p>
+
+							<div data-income-lookup>
+								<div data-organizations>
+									<template id="member-button">
+										<button
+											class="inline-block rounded-full py-2 px-3 border border-solid border-green no-underline leading-none transition-none hover:bg-green/70 hover:text-black"
+											style="font-weight: normal; color: #000"></button>
+									</template>
+									<!-- Buttons will go here -->
+								</div>
+								<table style="display: none;"
+									class="hideme lg:table table-auto border border-gray-500 w-full text-center"
+									data-table="desktop">
+									<thead>
+										<tr class="bg-white">
+											<th class="border border-gray-500 py-2 text-right">Household Size</th>
+											<th class="border border-gray-500 py-2 text-center">1</th>
+											<th class="border border-gray-500 py-2 text-center">2</th>
+											<th class="border border-gray-500 py-2 text-center">3</th>
+											<th class="border border-gray-500 py-2 text-center">4</th>
+											<th class="border border-gray-500 py-2 text-center">5</th>
+											<th class="border border-gray-500 py-2 text-center">6</th>
+											<th class="border border-gray-500 py-2 text-center">7</th>
+											<th class="border border-gray-500 py-2 text-center">8</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<th class="border border-gray-500 py-2 text-right bg-white">Income Threshold
+											</th>
+											<td class="border py-2 text-center bg-white" data-value></td>
+											<td class="border py-2 text-center bg-white" data-value></td>
+											<td class="border py-2 text-center bg-white" data-value></td>
+											<td class="border py-2 text-center bg-white" data-value></td>
+											<td class="border py-2 text-center bg-white" data-value></td>
+											<td class="border py-2 text-center bg-white" data-value></td>
+											<td class="border py-2 text-center bg-white" data-value></td>
+											<td class="border py-2 text-center bg-white" data-value></td>
+										</tr>
+									</tbody>
+								</table>
+
+								<table style="display: none;"
+									class="border border-gray-500 w-full max-w-sm min-w-0 mx-auto lg:hideme"
+									data-table="mobile">
+									<thead>
+										<tr class="bg-gray">
+											<th class="border border-gray-500 px-4 py-2 text-center">Household Size</th>
+											<th class="border border-gray-500 px-4 py-2 text-center">Income Threshold
+											</th>
+										</tr>
+									</thead>
+									<tbody class="bg-white">
+										<tr>
+											<td class="border px-4 py-2">1 Person</td>
+											<td class="border px-4 py-2" data-value></td>
+										</tr>
+										<tr>
+											<td class="border px-4 py-2">2 Persons</td>
+											<td class="border px-4 py-2" data-value></td>
+										</tr>
+										<tr>
+											<td class="border px-4 py-2">3 Persons</td>
+											<td class="border px-4 py-2" data-value></td>
+										</tr>
+										<tr>
+											<td class="border px-4 py-2">4 Persons</td>
+											<td class="border px-4 py-2" data-value></td>
+										</tr>
+										<tr>
+											<td class="border px-4 py-2">5 Persons</td>
+											<td class="border px-4 py-2" data-value></td>
+										</tr>
+										<tr>
+											<td class="border px-4 py-2">6 Persons</td>
+											<td class="border px-4 py-2" data-value></td>
+										</tr>
+										<tr>
+											<td class="border px-4 py-2">7 Persons</td>
+											<td class="border px-4 py-2" data-value></td>
+										</tr>
+										<tr>
+											<td class="border px-4 py-2">8 Persons</td>
+											<td class="border px-4 py-2" data-value></td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
 						</div>
 					</div>
 				</section>
-
 			</div>
 		</div>
 	</main>
 
-	<!-- Form Dialog -->
-	<dialog
-		class="animate-slide-in border-0 rounded-lg shadow-lg p-0 max-w-3xl w-11/12 h-[calc(100vh-2rem)] overflow-hidden backdrop:animate-fade-in backdrop:bg-black/50 backdrop:backdrop-blur-md">
-		<div class="relative h-full flex flex-col pt-12 lg:pt-0">
-			<button data-close-dialog
-				class="absolute top-2 right-2 z-10 cursor-pointer text-gray-600 bg-gray-dark text-white hover:text-black text-2xl font-bold leading-none border-0 bg-none p-0 w-8 h-8 flex items-center justify-center"
-				aria-label="Close dialog">&times;</button>
-			<div id="iframeContainer" class="flex-1 m-0">
-				<iframe id="formIframe" allowfullscreen="" frameborder="0" marginheight="0" marginwidth="0"
-					mozallowfullscreen="" msallowfullscreen=""
-					src="https://forms.office.com/Pages/ResponsePage.aspx?id=sPK0CYIJwk68Nk3iEP3DztUY5wrBxztMlsn3aKS5W6NUNlQ2WTlFOEg3MklBUDhJMFpEU0lNRUY2OS4u&amp;embed=true"
-					webkitallowfullscreen="" class="h-full w-full border-0">
-				</iframe>
-			</div>
-		</div>
-	</dialog>
+</body>
 
-	<script>
-		// Initialize dialog functionality on DOM load
-		document.addEventListener('DOMContentLoaded', () => {
-			const dialog = document.querySelector('dialog');
+<script>
+	const incomeLookupData = {
+		'hea': {
+			'label': 'HEA',
+			'table': {
+				1: '$57,120',
+				2: '$65,280',
+				3: '$73,440',
+				4: '$81,600',
+				5: '$90,551',
+				6: '$103,041',
+				7: '$105,383',
+				8: '$108,300',
+			},
+		},
+		'wrea': {
+			'label': 'WREA',
+			'table': {
+				1: '$57,120',
+				2: '$65,280',
+				3: '$73,440',
+				4: '$81,600',
+				5: '$90,551',
+				6: '$103,041',
+				7: '$105,383',
+				8: '$108,300',
+			},
+		},
+		'other': {
+			'label': 'Other',
+			'table': {
+				1: '$5,120',
+				2: '$6,280',
+				3: '$7,440',
+				4: '$8,600',
+				5: '$9,551',
+				6: '$13,041',
+				7: '$15,383',
+				8: '$18,300',
+			},
+		}
+	}						
+</script>
 
-			if (!dialog) return;
+<script>
+	// Helper function to create organization buttons
+	function helperCreateOrgButtons(container, template, data) {
+		// Create a button for each organization
+		Object.keys(data).forEach((orgKey) => {
+			const org = data[orgKey];
+			const clone = template.content.cloneNode(true);
+			const button = clone.querySelector('button');
 
-			// Open dialog when clicking elements with data-open-dialog
-			document.addEventListener('click', (e) => {
-				const trigger = e.target.closest('[data-open-dialog]');
-				if (trigger) {
-					e.preventDefault();
-					dialog.showModal();
-				}
-			});
+			button.textContent = org.label;
+			button.setAttribute('data-org-key', orgKey);
 
-			// Event delegation for dialog interactions
-			dialog.addEventListener('click', (e) => {
-				// Close dialog when clicking close button
-				if (e.target.closest('[data-close-dialog]')) {
-					dialog.close();
-					return;
-				}
-
-				// Close dialog when clicking outside (on the backdrop)
-				if (e.target === dialog) {
-					dialog.close();
-				}
-			});
-
-			// Escape key handled automatically by dialog
+			container.appendChild(clone);
 		});
-	</script>
+	}
+
+	// Helper function to populate table with income data
+	function helperPopulateTables(orgKey, data) {
+		const org = data[orgKey];
+		if (!org) return;
+
+		const desktopTable = document.querySelector('[data-table="desktop"]');
+		const mobileTable = document.querySelector('[data-table="mobile"]');
+
+		if (!desktopTable || !mobileTable) {
+			console.error('Tables not found');
+			return;
+		}
+
+		// Populate desktop table
+		const desktopCells = desktopTable.querySelectorAll('[data-value]');
+		desktopCells.forEach((cell, index) => {
+			const householdSize = index + 1;
+			cell.textContent = org.table[householdSize] || '';
+		});
+
+		// Populate mobile table
+		const mobileCells = mobileTable.querySelectorAll('tbody tr td:nth-child(2)');
+		mobileCells.forEach((cell, index) => {
+			const householdSize = index + 1;
+			cell.textContent = org.table[householdSize] || '';
+		});
+
+		// Show both tables by removing inline style
+		desktopTable.style.removeProperty('display');
+		mobileTable.style.removeProperty('display');
+	}
+
+	// Helper function to handle organization button clicks
+	function helperHandleOrgButtonClick(e) {
+		if (e.target.hasAttribute('data-org-key')) {
+			const orgKey = e.target.getAttribute('data-org-key');
+			helperPopulateTables(orgKey, incomeLookupData);
+
+			// Update active state on buttons
+			const allButtons = document.querySelectorAll('[data-org-key]');
+			allButtons.forEach(btn => {
+				btn.classList.remove('bg-green', 'text-white');
+				btn.classList.add('bg-transparent');
+			});
+			e.target.classList.remove('bg-transparent');
+			e.target.classList.add('bg-green', 'text-white');
+		}
+	}
+
+	// Helper function to confirm required DOM elements exist
+	function helperConfirmRequiredDOM(container, template, data) {
+		if (!container) {
+			console.error('Essential element [data-organizations] not found.');
+			return false;
+		}
+
+		if (!template) {
+			console.error('Template #member-button not found.');
+			return false;
+		}
+
+		if (typeof data === 'undefined' || typeof data !== 'object' || Object.keys(data).length === 0) {
+			console.error('incomeLookupData is required but not found or empty.');
+			return false;
+		}
+
+		return true;
+	}
+
+	// Initialize income lookup functionality
+	function initIncomeLookup() {
+		const container = document.querySelector('[data-organizations]');
+		const template = document.querySelector('#member-button');
+
+		// Validate required elements
+		if (!helperConfirmRequiredDOM(container, template, incomeLookupData)) return;
+
+		// Create organization buttons
+		helperCreateOrgButtons(container, template, incomeLookupData);
+
+		// Add event delegation for button clicks
+		container.addEventListener('click', helperHandleOrgButtonClick);
+	}
+
+	// Main initialization function
+	function initWeatherization() {
+		initIncomeLookup();
+	}
+
+	// Initialize on DOM load
+	window.addEventListener('DOMContentLoaded', initWeatherization);
+</script>
+
+
+</html>
