feat(weatherization): some styling

--- a/weatherization.htm
+++ b/weatherization.htm
@@ -80,10 +80,10 @@
 							</p>
 
 							<div data-income-lookup>
-								<div data-organizations>
+								<div class="mb-4" data-organizations>
 									<template id="member-button">
 										<button
-											class="inline-block rounded-full py-2 px-3 border border-solid border-green no-underline leading-none transition-none hover:bg-green/70 hover:text-black"
+											class="cursor-pointer inline-block rounded-full py-2 px-3 border border-solid no-underline leading-none transition-none hover:bg-green/70 hover:text-black"
 											style="font-weight: normal; color: #000"></button>
 									</template>
 									<!-- Buttons will go here -->
